--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,12 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Keeper App</title>
+
+		<link
+			href="https://fonts.googleapis.com/css2?family=McLaren&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="stylesheet" href="styles.css" />
 	</head>
 	<body>
 		<script src="../src/index.js" type="text/jsx"></script>
